Add the javascript menu animation and fix some layout problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,7 @@
 /************************
-    CSS SUMMARY:
-      1.GENERAL
-      2.HEADER & MAIN NAVIGATION
-      3.STUDENT PRESENTATION
-      4.STUDENT PORTFOLIO
-      5.STUDENT SKILLS
-      6.STUDENT CONTACT PAGE
-      7.FOOTER
-      8.MEDIA QUERIES
-
-        8.1.0.TABLET DEVICES
-        8.1.1.HEADER & MAIN NAVIGATION
-        8.1.2.STUDENT PRESENTATION
-        8.1.3.STUDENT PORTFOLIO
-        8.1.4.STUDENT SKILLS
-        8.1.5.STUDENT CONTACT PAGE
-        8.1.6.FOOTER
-
-        8.2.0.DESKTOP DEVICES
-        8.2.1.HEADER & MAIN NAVIGATION
-        8.2.2.STUDENT PRESENTATION
-        8.2.3.STUDENT PORTFOLIO
-        8.2.4.STUDENT SKILLS
-        8.2.5.STUDENT CONTACT PAGE
-
-
-************************/
-
-
-
-/************************
     GENERAL
 ************************/
 
-/* If you want to know more about the rule below :
-      http://blog.teamtreehouse.com/take-control-of-the-box-model-with-box-sizing
-*/
  * {
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
@@ -63,10 +29,6 @@ li {
   list-style: none;
 }
 
-/* If you want more information about the clearfix, please check the links below:
-      http://nicolasgallagher.com/micro-clearfix-hack/
-      http://fuseinteractive.ca/blog/understanding-humble-clearfix#.V7QPg5iLQ2x
-*/
 .clearfix::after {
   content: " ";
   display: table;
@@ -95,8 +57,17 @@ li {
   color: #000;
 }
 
-/* Remove the padding left applied by default */
+#hamburger-img {
+  position: absolute;
+  left: 5px;
+  top: 15px;
+  width: auto;
+  height: 30px;
+  cursor: pointer;
+}
+
 .main-nav ul {
+  display: none;
   padding-left: 0;
 }
 
@@ -280,271 +251,3 @@ footer {
 .footer-nav-items a {
   display: none;
 }
-
-
-
-/************************
-    MEDIA QUERIES
-************************/
-
-/* START: TABLET DEVICES */
-@media (min-width: 768px) {
-
-  /************************
-      HEADER & MAIN NAVIGATION
-  ************************/
-
-  .page-header {
-    padding: 30px 0 60px;
-  }
-
-  .main-nav li {
-    background: inherit;
-    padding-top: 0;
-    padding-bottom: 0;
-    display: inline-block;
-  }
-
-  .main-nav li:nth-child(2) {
-    margin-left: 30px;
-    margin-right: 30px;
-  }
-
-  .main-nav li:nth-child(3) {
-    margin-right: 30px;
-  }
-
-  .main-nav a {
-    font-size: 0.9em;
-    display: initial;
-  }
-
-
-
-  /************************
-      STUDENT PRESENTATION
-  ************************/
-
-  .student-presentation img {
-    width: 40%;
-    float: right;
-  }
-
-  .student-presentation p {
-    width: 60%;
-    float: left;
-    text-align: justify;
-    padding-right: 20px;
-  }
-
-
-
-  /************************
-      STUDENT PORTFOLIO
-  ************************/
-
-  .student-projects {
-    width: 50%;
-    float: left;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-bottom: 30px;
-  }
-
-  /* Fixed alignment issues when the window increases */
-  .student-projects:nth-child(4n) {
-    clear: left;
-  }
-
-  /* If you don't understand, have a look on line 129 */
-  .student-projects:last-child {
-    margin-bottom: 30px;
-  }
-
-
-
-  /************************
-      STUDENT SKILLS
-  ************************/
-
-  .student-skills {
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-
-  .skills-quote {
-    padding-bottom: 15px;
-    border-bottom: 2px solid #ddd;
-  }
-
-  .student-skills p:nth-child(3) {
-    padding-bottom: 10px;
-    border-bottom: 2px solid #ddd;
-  }
-
-  .technical-skills {
-    padding-left: 12%;
-    padding-right: 12%;
-  }
-
-
-
-  /************************
-      STUDENT CONTACT PAGE
-  ************************/
-
-  .student-contact-page p {
-    text-align: center;
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-
-  .contact-student-items li:first-child {
-    margin-top: 30px;
-  }
-
-  .contact-student-items li:last-child {
-    margin-top: 15px;
-  }
-
-
-
-  /************************
-      FOOTER
-  ************************/
-
-  .footer-nav {
-    text-align: right;
-  }
-
-  .footer-nav li:first-child {
-    position: absolute;
-    left: 0;
-  }
-
-  .to-top a {
-    display: none;
-  }
-
-  .footer-nav-items {
-    margin-left: 15px;
-  }
-
-  .footer-nav-items a {
-    display: initial;
-    font-size: 0.9em;
-  }
-
-  .footer-nav-items a:hover {
-    color: #777;
-  }
-}
-/* END: TABLET DEVICES */
-
-
-
-/* START: DESKTOP DEVICES */
-@media (min-width: 1024px) {
-
-  /************************
-      HEADER & MAIN NAVIGATION
-  ************************/
-
-  .page-header {
-    text-align: right;
-    position: relative;
-  }
-
-  .page-header h1, .main-nav {
-    display: inline-block;
-  }
-
-  .page-header h1 {
-    position: absolute;
-    left: 0;
-  }
-
-  .main-nav ul, .main-nav li {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-
-
-  /************************
-      STUDENT PRESENTATION
-  ************************/
-
-  .student-presentation p {
-    padding-right: 40px;
-  }
-
-
-
-  /************************
-      STUDENT PORTFOLIO
-  ************************/
-
-  .student-projects {
-    width: 33.3333%;
-  }
-
-  .student-projects:hover {
-    transition: .30s;
-    background: #aaa;
-    color: #fff;
-  }
-
-  /*
-    WARNING:
-      The order below realy matters!
-      If you change it, you will have some alignment issues!
-  */
-
-  .student-projects:nth-child(4n) {
-    clear: none;
-  }
-
-  .student-projects:nth-child(5n) {
-    clear: left;
-  }
-
-  .student-projects:nth-child(8n) {
-    clear: left;
-  }
-
-  .student-projects:nth-child(10n) {
-    clear: none;
-  }
-
-
-
-  /************************
-      STUDENT SKILLS
-  ************************/
-
-  .student-skills {
-    padding-left: 12%;
-    padding-right: 12%;
-  }
-
-  .skills-quote {
-    padding-bottom: 30px;
-  }
-
-  .student-skills p:nth-child(3) {
-    padding-bottom: 20px;
-  }
-
-
-
-  /************************
-      STUDENT CONTACT PAGE
-  ************************/
-
-  .student-contact-page p {
-    padding-left: 28%;
-    padding-right: 28%;
-  }
-}
-/* END: DESKTOP DEVICES */
