Add flexbox css' properties to the project especially the portfolio.

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,21 @@ body {
   margin: 0 auto;
 }
 
+section {
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+article {
+  margin-top: 50px;
+}
+
+h2 {
+  text-transform: uppercase;
+  margin-bottom: 50px;
+  font-size: 1.3em;
+}
+
 img {
   max-width: 100%;
 }
@@ -44,9 +59,11 @@ li {
 .page-header {
   padding: 15px 0 30px;
   text-align: center;
+  border-bottom: 1px solid grey;
+  margin-bottom: 50px;
 }
 
-/* Remove the margin top and bottom applied by default */
+
 .page-header h1 {
   font-size: 1.4em;
   margin-top: 0;
@@ -100,6 +117,10 @@ li {
   font-weight: 300;
 }
 
+.student-presentation img {
+  max-width: 80%;
+}
+
 .student-presentation p a {
   color: #000;
   font-weight: 400;
@@ -116,24 +137,11 @@ li {
 ************************/
 
 .student-portfolio {
-  margin-top: 100px;
-  margin-bottom: 100px;
   text-align: center;
 }
 
-.student-portfolio h2 {
-  text-transform: uppercase;
-  margin-bottom: 50px;
-  font-size: 1em;
-}
-
 .student-projects {
-  margin-bottom: 60px;
   font-size: 1em;
-}
-
-.student-projects:last-child {
-  margin-bottom: 0;
 }
 
 
@@ -142,24 +150,14 @@ li {
     STUDENT SKILLS
 ************************/
 
-.student-skills {
-  margin-bottom: 100px;
-}
-
-.student-skills h2 {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 1em;
-  margin-bottom: 40px;
-}
-
 .skills-quote {
   text-align: center;
   font-weight: 300;
+  font-style: italic;
 }
 
 .skills-quote span {
-  font-weight: 400;
+  font-weight: bold;
 }
 
 .student-skills p:nth-child(3),
@@ -170,23 +168,15 @@ li {
 .technical-skills {
   padding-left: 0;
   text-align: center;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .technical-skills li {
-  border: 1px solid #aaa;
-  display: inline-block;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.technical-skills li:nth-child(even) {
-  font-style: italic;
-}
-
-.technical-skills li:nth-child(odd) {
-  font-weight: 300;
+  border: 2px solid #999;
+  padding: 5px;
+  margin: 5px;
 }
 
 
@@ -200,11 +190,6 @@ li {
   font-weight: 300;
 }
 
-.student-contact-page h2 {
-  text-transform: uppercase;
-  font-size: 1em;
-  margin-bottom: 40px;
-}
 
 .contact-student-items {
   padding-left: 0;
@@ -216,6 +201,10 @@ li {
   font-weight: 400;
 }
 
+.contact-student-items a:hover {
+  text-decoration: underline;
+}
+
 
 
 /************************
@@ -224,23 +213,17 @@ li {
 
 footer {
   border-top: 1px solid #bbb;
-  margin-top: 80px;
-  margin-bottom: 30px;
 }
 
 .footer-nav ul {
   padding-left: 0;
-  position: relative;
-}
-
-.footer-nav li {
-  display: inline-block;
+  display: flex;
+  justify-content: space-around;
   font-weight: bold;
 }
 
-.footer-nav li:nth-child(2) {
-  position: absolute;
-  right: 0;
+.footer-nav li:first-child {
+  margin-right: auto;
 }
 
 .footer-nav a {
