--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,7 +1,7 @@
 .page-header {
   padding: 15px 0 30px;
   text-align: center;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #bbb;
   margin-bottom: 50px;
 }
 
