--- a/scss/layouts/_header-navigation.scss
+++ b/scss/layouts/_header-navigation.scss
@@ -15,8 +15,9 @@
   font-weight: bold;
   color: #000;
   display: block;
-}
 
-.main-nav a:hover {
-  color: #777;
+  // Only target my a tags inside .main-nav
+  &:hover {
+    color: #777;
+  }
 }
