--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -3,14 +3,15 @@
   text-align: center;
   border-bottom: 1px solid #bbb;
   margin-bottom: 50px;
-}
 
-.page-header h1 {
-  font-size: 1.4em;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  // Only have one h1 tag on my document
+  & h1 {
+    font-size: 1.4em;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
-.page-header h1 a {
-  color: #000;
+  & h1 a {
+    color: #000;
+  }
 }
