--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -3,4 +3,5 @@
 // ==========================================================================
 
 @import "normalize";
+@import "variables";
 @import "base";
