--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -9,7 +9,7 @@
 
 .contact-student-items a {
   margin-left: 10px;
-  color: #000;
+  color: $color-link-default;
   font-weight: 400;
   // Only targets the a tags (phone & e-mail)
   &:hover {
