--- a/scss/sections/_presentation.scss
+++ b/scss/sections/_presentation.scss
@@ -9,7 +9,7 @@
 }
 
 .student-presentation p a {
-  color: #000;
+  color: $color-link-default;
   font-weight: 400;
   // Only targets the a tags on hover
   &:hover {
