--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -18,3 +18,9 @@ $background-color-main-nav  : $white;
 
 $color-border-light         : $silver;
 $color-border-dark          : $dusty-gray;
+
+
+
+// Font stacks
+$sans-serif : sans-serif;
+$open-sans  : 'Open Sans', $sans-serif;
