--- a/scss/layouts/_footer-navigation.scss
+++ b/scss/layouts/_footer-navigation.scss
@@ -9,11 +9,29 @@
   margin-right: auto;
 }
 
+.to-top {
+  @media #{$tablet} {
+    display: none;
+  }
+}
+
 .footer-nav a {
   @extend %to-upper;
   color: $color-link-default;
 }
 
+.footer-nav-items {
+  @media #{$tablet} {
+    padding: 0px 5px;
+  }
+}
+
 .footer-nav-items a {
   display: none;
+  @media #{$tablet} {
+    display: initial;
+    &:hover {
+      color: #777;
+    }
+  }
 }
