--- a/scss/sections/_presentation.scss
+++ b/scss/sections/_presentation.scss
@@ -2,11 +2,27 @@
   @extend %centered;
   @extend %clearfix;
   font-weight: 300;
+
+  & img {
+    max-width: 80%;
+    @media #{$tablet} {
+      float: left;
+      max-width: 40%;
+    }
+  }
+
+  // Only targets the p bloc inside the student presentation
+  & p {
+    @media #{$tablet} {
+      float: right;
+      max-width: 60%;
+      padding: 0px 5px;
+    }
+  }
 }
 
-.student-presentation img {
-  max-width: 80%;
-}
+
+
 
 .student-presentation p a {
   color: $color-link-default;
