--- a/scss/sections/_skills.scss
+++ b/scss/sections/_skills.scss
@@ -2,23 +2,31 @@
   @extend %centered;
   font-weight: 300;
   font-style: italic;
+  @media #{$tablet} {
+    border-bottom: 2px solid #ddd;
+  }
   // Only targets the author of the quote (Mahatma Gandhi)
   & span {
     font-weight: bold;
   }
 }
 
-.student-skills p:nth-child(3),
-.student-skills p:nth-child(4) {
+.student-skills p:nth-child(3) {
   text-align: justify;
+  @media #{$tablet} {
+    border-bottom: 2px solid #ddd;
+  }
 }
 
 .technical-skills {
-  padding-left: 0;
   @extend %centered;
+  padding-left: 0;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
+  @media #{$tablet} {
+    padding: 0 10%;
+  }
   // Only targets the list of skills
   & li {
     border: 2px solid $color-border-dark;
