Last modifications before submit

--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -1,3 +1,5 @@
+
+// This icon appears only on mobile devices and is removed on larger devices
 #hamburger-img {
   position: absolute;
   left: 5px;
